cleaning temp files

--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
                             <li class="mb-2 sm:text-sm md:text-base font-normal text-gray-500 dark:text-gray-400">Ensure
                                 you meet the prerequisites for our two cohorts – experienced and promising.</li>
                             <li class="mb-2 sm:text-sm md:text-base font-normal text-gray-500 dark:text-gray-400">Submit
-                                your application by [deadline].</li>
+                                your application by Dec 31st, 2023.</li>
                             <li class="mb-2 sm:text-sm md:text-base font-normal text-gray-500 dark:text-gray-400">Due to
                                 limited spots, we will screen applications to shortlist candidates.</li>
                             <li class="mb-2 sm:text-sm md:text-base font-normal text-gray-500 dark:text-gray-400">
