social media added

--- a/thankyou.html
+++ b/thankyou.html
@@ -54,8 +54,8 @@
   <p style="margin-top: 20px; font-weight: bold; color: #333">In the meantime check us out here!</p>
   <div class="check-icons">
     <!-- Icons would be inserted here, using <img> tags or icon fonts like FontAwesome -->
-    <a href="your-instagram-url"><img src="pictures/instagramicon.png" alt="Instagram"></a>
-    <a href="your-facebook-url"><img src="pictures/facebookicon.png" alt="Facebook"></a>
+    <a href="https://www.instagram.com/oxfordkaggleclub/"><img src="pictures/instagramicon.png" alt="Instagram"></a>
+    <a href="https://www.facebook.com/OxfordKaggleClub"><img src="pictures/facebookicon.png" alt="Facebook"></a>
   </div>
 </div>
 
